Assembler/tests/optimizations/uninit_read.asm
addci c0, c1, 2
